--- a/com.midcities.automation/test-output/old/Suite/classes.html
+++ b/com.midcities.automation/test-output/old/Suite/classes.html
@@ -37,4 +37,38 @@
 <td>&nbsp;</td>
 <td>finish</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>com.midcities.testcases.Login_Negative_Case</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginNegativeInput</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>startUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>screenshotHandler</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>finish</td>
+<td>&nbsp;</td></tr>
 </table>
