--- a/com.midcities.automation/test-output/old/Suite/methods.html
+++ b/com.midcities.automation/test-output/old/Suite/methods.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="df9b86">  <td>20/02/10 12:25:20</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@51e69659]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@510276116</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>20/02/10 12:25:21</td>   <td>900</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@51e69659]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@510276116</td>   <td></td> </tr>
-<tr bgcolor="a7d8ae">  <td>20/02/10 12:25:35</td>   <td>15411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Positive_Case.loginIntoTheApplication()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@51e69659]">loginIntoTheApplication</td> 
-  <td>main@510276116</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>20/02/10 12:25:51</td>   <td>30934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.Login_Positive_Case@51e69659]">&lt;&lt;screenshotHandler</td> 
-<td>&nbsp;</td>  <td>main@510276116</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>20/02/10 12:25:52</td>   <td>32290</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@51e69659]">&lt;&lt;finish</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@510276116</td>   <td></td> </tr>
+<tr bgcolor="7c699d">  <td>20/02/12 17:25:25</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="7c699d">  <td>20/02/12 17:25:26</td>   <td>1223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="b7fdc8">  <td>20/02/12 17:25:41</td>   <td>16315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Positive_Case.loginIntoTheApplication()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">loginIntoTheApplication</td> 
+  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="7c699d">  <td>20/02/12 17:25:42</td>   <td>16926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&lt;&lt;screenshotHandler</td> 
+<td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="7c699d">  <td>20/02/12 17:25:44</td>   <td>19150</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&lt;&lt;finish</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="7c699d">  <td>20/02/12 17:25:48</td>   <td>23002</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Login_Negative_Case@5505ae1a]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="82c5f1">  <td>20/02/12 17:25:48</td>   <td>23018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Negative_Case.loginNegativeInput()[pri:0, instance:com.midcities.testcases.Login_Negative_Case@5505ae1a]">loginNegativeInput</td> 
+  <td>main@1241480588</td>   <td></td> </tr>
 </table>
