Added new screens and changes

--- a/com.midcities.automation/test-output/old/Suite/classes.html
+++ b/com.midcities.automation/test-output/old/Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.midcities.testcases.Login_Positive_Case</td>
+<td>com.midcities.testcases.Chassis_Positive_Case</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginIntoTheApplication</td>
+<td>chassisPositive</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -34,14 +34,18 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.midcities.testcases.Login_Negative_Case</td>
+<td>&nbsp;</td>
+<td>finish</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.midcities.testcases.Chassis_Negative_Case</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginNegativeInput</td>
+<td>chassisNegative</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -63,4 +67,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>finish</td>
+<td>&nbsp;</td></tr>
 </table>
