--- a/com.midcities.automation/test-output/old/Suite/methods.html
+++ b/com.midcities.automation/test-output/old/Suite/methods.html
@@ -1,18 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c699d">  <td>20/02/12 17:25:25</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&gt;&gt;setupSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
-<tr bgcolor="7c699d">  <td>20/02/12 17:25:26</td>   <td>1223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
-<tr bgcolor="b7fdc8">  <td>20/02/12 17:25:41</td>   <td>16315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Positive_Case.loginIntoTheApplication()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">loginIntoTheApplication</td> 
-  <td>main@1241480588</td>   <td></td> </tr>
-<tr bgcolor="7c699d">  <td>20/02/12 17:25:42</td>   <td>16926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&lt;&lt;screenshotHandler</td> 
-<td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
-<tr bgcolor="7c699d">  <td>20/02/12 17:25:44</td>   <td>19150</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@416c58f5]">&lt;&lt;finish</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
-<tr bgcolor="7c699d">  <td>20/02/12 17:25:48</td>   <td>23002</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Login_Negative_Case@5505ae1a]">&gt;&gt;startUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1241480588</td>   <td></td> </tr>
-<tr bgcolor="82c5f1">  <td>20/02/12 17:25:48</td>   <td>23018</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Negative_Case.loginNegativeInput()[pri:0, instance:com.midcities.testcases.Login_Negative_Case@5505ae1a]">loginNegativeInput</td> 
-  <td>main@1241480588</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:26:26</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.Chassis_Positive_Case@201a4587]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:26:28</td>   <td>1412</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Chassis_Positive_Case@201a4587]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="a7d8ae">  <td>20/03/10 12:26:41</td>   <td>15220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Chassis_Positive_Case.chassisPositive()[pri:0, instance:com.midcities.testcases.Chassis_Positive_Case@201a4587]">chassisPositive</td> 
+  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:26:59</td>   <td>33085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.Chassis_Positive_Case@201a4587]">&lt;&lt;screenshotHandler</td> 
+<td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:27:01</td>   <td>34387</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.Chassis_Positive_Case@201a4587]">&lt;&lt;finish</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:27:04</td>   <td>37388</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Chassis_Negative_Case@61001b64]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="84a97d">  <td>20/03/10 12:27:17</td>   <td>51016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Chassis_Negative_Case.chassisNegative()[pri:0, instance:com.midcities.testcases.Chassis_Negative_Case@61001b64]">chassisNegative</td> 
+  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:27:37</td>   <td>70320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.Chassis_Negative_Case@61001b64]">&lt;&lt;screenshotHandler</td> 
+<td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
+<tr bgcolor="65a581">  <td>20/03/10 12:27:37</td>   <td>70968</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.Chassis_Negative_Case@61001b64]">&lt;&lt;finish</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@445918232</td>   <td></td> </tr>
 </table>
