--- a/com.midcities.automation/test-output/emailable-report.html
+++ b/com.midcities.automation/test-output/emailable-report.html
@@ -8,19 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Login_Positive</a></td><td class="num">1</td><td class="num attn">1</td><td class="num">0</td><td class="num">21,843</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">25,961</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login_Positive &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.midcities.testcases.Login_Negative_Case</td><td><a href="#m0">startUp</a></td><td rowspan="1">1581508548603</td><td rowspan="1">0</td></tr><tr><th colspan="4">Login_Positive &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="2">com.midcities.testcases.Login_Negative_Case</td><td><a href="#m1">finish</a></td><td rowspan="1">1581508548643</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m2">screenshotHandler</a></td><td rowspan="1">1581508548631</td><td rowspan="1">0</td></tr><tr><th colspan="4">Login_Positive &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">com.midcities.testcases.Login_Negative_Case</td><td><a href="#m3">loginNegativeInput</a></td><td rowspan="1">1581508548619</td><td rowspan="1">0</td></tr><tr><th colspan="4">Login_Positive &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.midcities.testcases.Login_Positive_Case</td><td><a href="#m4">loginIntoTheApplication</a></td><td rowspan="1">1581508541916</td><td rowspan="1">603</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.midcities.testcases.DriverRates_Positive_Case</td><td><a href="#m0">driverRatesPositive</a></td><td rowspan="1">1587529076764</td><td rowspan="1">6165</td></tr></tbody>
 </table>
-<h2>Login_Positive</h2><h3 id="m0">com.midcities.testcases.Login_Negative_Case#startUp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.midcities.pages.BaseClass.startUp(BaseClass.java:48)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.midcities.testcases.Login_Negative_Case#finish</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.midcities.testcases.Login_Negative_Case#screenshotHandler</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.midcities.testcases.Login_Negative_Case#loginNegativeInput</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at com.midcities.pages.BaseClass.startUp(BaseClass.java:48)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.midcities.testcases.Login_Positive_Case#loginIntoTheApplication</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.midcities.testcases.DriverRates_Positive_Case#driverRatesPositive</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
