--- a/com.midcities.automation/test-output/old/Default suite/classes.html
+++ b/com.midcities.automation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.midcities.testcases.Login_Positive_Case</td>
+<td>com.midcities.testcases.DriverRates_Positive_Case</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginIntoTheApplication</td>
+<td>driverRatesPositive</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -33,4 +33,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>finish</td>
+<td>&nbsp;</td></tr>
 </table>
