--- a/com.midcities.automation/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.midcities.automation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c8d86">  <td>20/02/04 12:02:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Positive_Case.loginIntoTheApplication()[pri:0, instance:com.midcities.testcases.Login_Positive_Case@17c1bced]">loginIntoTheApplication</td> 
-  <td>main@296347592</td>   <td></td> </tr>
+<tr bgcolor="6ab0da">  <td>20/04/22 09:47:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverRates_Positive_Case.driverRatesPositive()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">driverRatesPositive</td> 
+  <td>main@1914301543</td>   <td></td> </tr>
+<tr bgcolor="a785b4">  <td>20/04/22 09:48:04</td>   <td>7318</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&lt;&lt;finish</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
+<tr bgcolor="a785b4">  <td>20/04/22 09:48:02</td>   <td>6173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&lt;&lt;screenshotHandler</td> 
+<td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
+<tr bgcolor="a785b4">  <td>20/04/22 09:47:39</td>   <td>-16819</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&gt;&gt;setupSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
+<tr bgcolor="a785b4">  <td>20/04/22 09:47:41</td>   <td>-15628</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&gt;&gt;startUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
 </table>
