--- a/com.midcities.automation/test-output/old/Default suite/classes.html
+++ b/com.midcities.automation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.midcities.testcases.DriverRates_Positive_Case</td>
+<td>com.midcities.testcases.Customer_Positive_Case</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>driverRatesPositive</td>
+<td>CustomerPositiveCase</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
