--- a/com.midcities.automation/test-output/old/Default suite/methods.html
+++ b/com.midcities.automation/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a785b4">  <td>20/04/22 09:47:39</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&gt;&gt;setupSuite</td> 
+<tr bgcolor="a785b4">  <td>20/04/22 11:01:51</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:com.midcities.testcases.Customer_Positive_Case@327b636c]">&gt;&gt;setupSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
-<tr bgcolor="a785b4">  <td>20/04/22 09:47:41</td>   <td>1191</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&gt;&gt;startUp</td> 
+<tr bgcolor="a785b4">  <td>20/04/22 11:01:52</td>   <td>1079</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.startUp()[pri:0, instance:com.midcities.testcases.Customer_Positive_Case@327b636c]">&gt;&gt;startUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
-<tr bgcolor="6ab0da">  <td>20/04/22 09:47:56</td>   <td>16819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DriverRates_Positive_Case.driverRatesPositive()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">driverRatesPositive</td> 
+<tr bgcolor="6ab0da">  <td>20/04/22 11:02:08</td>   <td>16989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Customer_Positive_Case.CustomerPositiveCase()[pri:0, instance:com.midcities.testcases.Customer_Positive_Case@327b636c]">CustomerPositiveCase</td> 
   <td>main@1914301543</td>   <td></td> </tr>
-<tr bgcolor="a785b4">  <td>20/04/22 09:48:02</td>   <td>22992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&lt;&lt;screenshotHandler</td> 
+<tr bgcolor="a785b4">  <td>20/04/22 11:02:20</td>   <td>29117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.screenshotHandler(org.testng.ITestResult)[pri:0, instance:com.midcities.testcases.Customer_Positive_Case@327b636c]">&lt;&lt;screenshotHandler</td> 
 <td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
-<tr bgcolor="a785b4">  <td>20/04/22 09:48:04</td>   <td>24137</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.DriverRates_Positive_Case@327b636c]">&lt;&lt;finish</td> 
+<tr bgcolor="a785b4">  <td>20/04/22 11:02:21</td>   <td>30116</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.finish()[pri:0, instance:com.midcities.testcases.Customer_Positive_Case@327b636c]">&lt;&lt;finish</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1914301543</td>   <td></td> </tr>
 </table>
